--- a/GameInterface.ipynb
+++ b/GameInterface.ipynb
@@ -74,7 +74,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -88,7 +88,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "26a2e4d89d80b9cfe50c234e23f288f3f3c4b085a10fa7583d47afb7c947b448"
+   }
   }
  },
  "nbformat": 4,
