--- a/GameDataAnalysis.ipynb
+++ b/GameDataAnalysis.ipynb
@@ -11,7 +11,9 @@
     "import json\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import math"
+    "import math\n",
+    "\n",
+    "#test system data analysis"
    ]
   },
   {
@@ -1048,6 +1050,7 @@
     }
    ],
    "source": [
+    "#wipe the ai help round\n",
     "pdDataNoAI=pdData[pdData[\"ai_help\"]==0].copy()\n",
     "pdDataNoAI"
    ]
