--- a/GymQLearning.ipynb
+++ b/GymQLearning.ipynb
@@ -37,6 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hash likehold method\n",
+    "#map game board state to a string as a dictionary key and trun back\n",
+    "#for Q-table dictionary\n",
     "def BoardToStr(board):\n",
     "    value=\"\"\n",
     "    for x in range(8):\n",
@@ -68,7 +71,7 @@
    "outputs": [],
    "source": [
     "RANDOM_PLAYER=True\n",
-    "#gym environment\n",
+    "#Draughts gym environment implementation\n",
     "class ShowerEnv(Env):\n",
     "    def __init__(self):\n",
     "        #init game\n",
@@ -100,7 +103,7 @@
     "        else:\n",
     "            done=False\n",
     "        \n",
-    "\n",
+    "        # random player or minimax player act as player 1\n",
     "        possible_states=self.game.Movement(self.game.board,PLAYER1_SYMBOL)\n",
     "        #opponent player\n",
     "        if RANDOM_PLAYER:\n",
@@ -320,7 +323,9 @@
     "random_play[\"episode\"]=episode\n",
     "random_play[\"winner\"]=winner\n",
     "random_play[\"player1_reward\"]=player2_reward\n",
-    "random_play"
+    "random_play\n",
+    "\n",
+    "#reward= player1 reward - player2 reward"
    ]
   },
   {
@@ -351,6 +356,7 @@
     }
    ],
    "source": [
+    "#Almost equivalent win rates\n",
     "random_play[\"winner\"].hist(bins=2)\n",
     "plt.title(\"2 Random movement players against each other\")\n",
     "plt.xlabel(\"player\")\n",
@@ -385,10 +391,10 @@
     }
    ],
    "source": [
-    "# Q-learning training with random player\n",
-    "alpha = 0.1\n",
-    "gamma = 0.6\n",
-    "epsilon = 0.2\n",
+    "# Q-learning training using random player\n",
+    "alpha = 0.1 #learning rate\n",
+    "gamma = 0.6 #discount factor\n",
+    "epsilon = 0.2 #raondom action \n",
     "q_table = {}\n",
     "\n",
     "num_of_episodes = 1000\n",
